--- a/src/css/AvailableItems.css
+++ b/src/css/AvailableItems.css
@@ -1,114 +1,97 @@
-
-@font-face {
+    @font-face {
     font-family: 'tangerineregular';
     src: url('/src/fonts/tangerine-webfont.woff2') format('woff2'),
-          url('/src/fonts/tangerine-webfont.woff') format('woff');
+        url('/src/fonts/tangerine-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    }
 
-}
-
-
-.available-items-container{
-
+    .available-items-container {
     background-color: #344028;
-    
-  
-}
+    }
 
-/*-------Available Items List ----------*/
-.currently-claimed-items{
-    color:white;
+    /*-------Available Items List ----------*/
+    .currently-claimed-items {
+    color: white;
     font-family: tangerineregular;
     text-align: center;
     margin-top: 20px;
-}
+    }
 
-.item-history-container{
-    border:4px solid #F2D0D0; 
-    background-color: #A68380;
-    height:350px; 
-    /* display:flex;  */
+    .item-history-container {
+    border: 4px solid #f2d0d0;
+    background-color: #a68380;
+    height: 350px;
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
-}
-
-.item-history-images{
-    height:200px;
-    width:200px;
-    margin:10px;
-    border: 4px solid #8EA66A;
-    border-radius: 10px;
-}
-
-h1{
-    text-align: center;
-    /* margin-top:40px; */
-    font-family: tangerineregular;
-    color:white;
-  
-}
-
-
-
-
-
-/*-------Available Items Card ----------*/
-.available-items-card{
-    border:5px solid #A68380;
-    margin: 10px 0px 10px 0px;
-    border-radius:10px;
-}
-
-.available-items-card:hover{
-    box-shadow:10px 5px 5px #8EA66A ;
-    cursor:pointer;
-}
-
-.card-img-top{
-    height:600px;
-  
-}
-
-.card-body{
-    height:500px;
-   
-    
-}
-.card{
-    width:500px;
-}
-
-.claim-item-button{
-    background-color:#BAD9C8; ;
-    height:50px;
-    width:120px;
-    border-radius: 10px;
-    outline:none;
-    border:3px solid #517360 ;
-    margin:8px;
-}
-
-.claim-item-button:hover{
-    box-shadow: 10px 5px 5px #8FA4BF;
-}
-
-
-@media only screen and (max-width: 500px){
-    .available-items-card{
-        width:95%;
-        margin:1rem;
     }
 
-    .col{
-        display:flex;
+    .item-history-images {
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+    border: 4px solid #8ea66a;
+    border-radius: 10px;
+    }
+
+    h1 {
+    text-align: center;
+    font-family: tangerineregular;
+    color: white;
+    }
+
+    /*-------Available Items Card ----------*/
+    .available-items-card {
+    border: 5px solid #a68380;
+    margin: 10px 0px 10px 0px;
+    border-radius: 10px;
+    }
+
+    .available-items-card:hover {
+    box-shadow: 10px 5px 5px #8ea66a;
+    cursor: pointer;
+    }
+
+    .card-img-top {
+    height: 600px;
+    }
+
+    .card-body {
+    height: 500px;
+    }
+    .card {
+    width: 500px;
+    }
+
+    .claim-item-button {
+    background-color: #bad9c8;
+    height: 50px;
+    width: 120px;
+    border-radius: 10px;
+    outline: none;
+    border: 3px solid #517360;
+    margin: 8px;
+    }
+
+    .claim-item-button:hover {
+    box-shadow: 10px 5px 5px #8fa4bf;
+    }
+
+    @media only screen and (max-width: 500px) {
+    .available-items-card {
+        width: 95%;
+        margin: 1rem;
+    }
+
+    .col {
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-    .card-body{
-        height:98%;
+    .card-body {
+        height: 98%;
     }
-}
+    }
