--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,67 +1,50 @@
-/* @font-face {
-    font-family: tangerine;
-    src: url('tangerine-webfont.woff');
-} */
-
-@font-face {
+    @font-face {
     font-family: 'tangerineregular';
     src: url('/src/fonts/tangerine-webfont.woff2') format('woff2'),
-          url('/src/fonts/tangerine-webfont.woff') format('woff');
+        url('/src/fonts/tangerine-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    }
 
-}
-
-.landing-page-container{
+    .landing-page-container {
     height: 700px;
-    background-color:#8EA66A ;
-    display:flex;
+    background-color: #8ea66a;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* justify-content: space-around; */
-    
-    
-}
+    }
 
-.good-karma-landing-title{
+    .good-karma-landing-title {
     margin-top: 50px;
-    font-family:tangerineregular;
-    font-size:70px;
-    color:white;
-}
+    font-family: tangerineregular;
+    font-size: 70px;
+    color: white;
+    }
 
-.good-karma-tagline{
+    .good-karma-tagline {
     margin-top: 20px;
-    color:white;
-    font-family:tangerineregular;
-}
+    color: white;
+    font-family: tangerineregular;
+    }
 
-.landing-page-image{
-    height:450px;
-    width:600px;
-    /* border-radius: 50%; */
+    .landing-page-image {
+    height: 450px;
+    width: 600px;
     border: 3px solid white;
     border-radius: 30px;
-    padding:.5rem;
-    /* border-radius: 200px 200px 0 0; */
-   
-}
-/* .good-karma-landing-title,
-.good-karma-tagline{
-    display:inline-block;
-} */
+    padding: 0.5rem;
+    }
 
-@media only screen and (max-width: 500px){
-    .landing-page-image{
-        width:80%;
-        height:40%;
-        padding:.5rem;
-        /* height:30%; */
+    @media only screen and (max-width: 500px) {
+    .landing-page-image {
+        width: 80%;
+        height: 40%;
+        padding: 0.5rem;
     }
-    .good-karma-tagline{
+    .good-karma-tagline {
         text-align: center;
-        font-size:20px;
-        padding:1rem;
+        font-size: 20px;
+        padding: 1rem;
     }
-}
+    }
